--- a/snapstyle.html
+++ b/snapstyle.html
@@ -25,9 +25,9 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">About me</a></li>
-											<li><a href="elements.html">Case Studies</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<!-- <li><a href="elements.html">Case Studies</a></li> -->
+	<!-- 										<li><a href="#">Sign Up</a></li>
+											<li><a href="#">Log In</a></li> -->
 										</ul>
 									</div>
 								</li>
