--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1><a href="index.html">SDR</a></h1>
+			<h1><a href="index.html">Steph Del Rio</a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="special">
@@ -85,7 +85,7 @@
 							<!-- Banner Image Hands UXing-->
 							<!-- data-stellar-background-ratio="0.5" -->
 
-							<section id="stephsketch" data-stellar-background-ratio="1.15">
+<!-- 							<section id="stephsketch" data-stellar-background-ratio="1.15">
 								<div class="inner">
 									<h2></h2>
 									<p><br />
@@ -93,13 +93,13 @@
 											- Steve Krug</em>
 										</p>
 									</div>
-								</section>
+								</section> -->
 
 								<!-- The UX process -->
 
-								<section id="one" class="wrapper style1 special">
+								<!-- <section id="one" class="wrapper style1 special"> -->
 									<!-- 						<div class="inner"> -->
-									<header class="major">
+									<!-- <header class="major">
 										<h2>My UX process</h2>
 										<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 											fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
@@ -108,9 +108,9 @@
 											<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
 											<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
 											<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-										</ul>
+										</ul> -->
 										<!-- 						</div> -->
-									</section>
+						<!-- 			</section> -->
 
 									<!-- Work Section -->
 
@@ -236,7 +236,7 @@
 		<script src="assets/js/typed.js"></script>
 		<script src="assets/js/jquery.stellar.min.js"></script>  
 
-		<script>
+<!-- 		<script>
 			//https://github.com/mattboldt/typed.js/blob/master/README.md
 			$(function(){
 				$("#element").typed({
@@ -249,7 +249,7 @@
 
           });
 			});
-		</script>
+		</script> -->
 
 	</body>
 	</html>
