--- a/snapstyle.html
+++ b/snapstyle.html
@@ -206,11 +206,11 @@
 
 
 										
-									<h5>Blockquote</h5>
+									<!-- <h5>Blockquote</h5>
 									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-								</section>
+								</section> -->
 
-								<section>
+								<!-- <section>
 									<h4>Lists</h4>
 									<div class="row">
 										<div class="6u 12u$(medium)">
@@ -245,7 +245,7 @@
 												<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 											</ul>
 										</div>
-									</div>
+									</div> -->
 									<!-- <h5>Actions</h5>
 									<div class="row">
 										<div class="6u 12u$(medium)">
@@ -277,8 +277,8 @@
 											</ul>
 										</div>
 									</div> -->
-								</section>
-
+						<!-- 		</section> -->
+<!-- 
 								<section>
 									<h4>Table</h4>
 									<h5>Default</h5>
@@ -483,7 +483,7 @@
 
 							</div>
 						</section>
-					</article>
+					</article> -->
 
 				<!-- Footer -->
 					<footer id="footer">
