landing page changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1><a href="index.html">Steph Del Rio</a></h1>
+			<h1 id="logo"><a href="index.html">Steph Del Rio</a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="special">
@@ -28,7 +28,7 @@
 								<li><a href="generic.html">About</a></li>
 								<li><a href="elements.html">Process</a></li>
 								<li><a href="#two">Work</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="#cta">Contact</a></li>
 							</ul>
 						</div>
 					</li>
@@ -78,7 +78,7 @@
 								</header>
 								<!-- 	</div> -->
 								<ul class="actions">
-									<li><a href="#" class="button fit special">Say Hello</a></li>
+									<li><a href="generic.html" class="button fit special">About me</a></li>
 								</ul>
 							</section>
 
@@ -117,7 +117,7 @@
 									<section id="two" class="wrapper alt style2">
 										<section class="spotlight">
 											<div class="image"><img src="images/snapstyle/shopstyle.jpg" alt="" /></div><div class="content">
-											<h2><a href="snapstyle.html">SnapStyle</a></h2>
+											<h2><b class="case-study-title">SHOPSTYLE</b></h2>
 											<h4>Search, discover, and buy anything you can photograph.</h4>
 											<p>My Role: Lead researcher, strategist, designer, usability tester</p>
 											<ul class="actions">
@@ -127,7 +127,7 @@
 									</section>
 									<section class="spotlight">
 										<div class="image"><img src="images/snapstyle/curate.jpg" alt="" /></div><div class="content">
-										<h2><a href="#">Curate</a></h2>
+										<h2><b class="case-study-title">CURATE</b></h2>
 										<h4>Men's custom outfit builder.</h4>
 										<p>My Role: Researcher, client manager, usability tester</p>
 										<p>CASE STUDY COMING SOON</p>
@@ -135,7 +135,7 @@
 								</section>
 								<section class="spotlight">
 									<div class="image"><img src="images/snapstyle/Airplane2.jpg" alt="" /></div><div class="content">
-									<h2><a href="#">Yelp Travel</a></h2>
+									<h2><b class="case-study-title">Yelp Travel</b></h2>
 									<h4>A new way to plan your trips.</h4>
 									<p>My Role: Lead researcher, strategist, usability tester</p>
 									<p>CASE STUDY COMING SOON</p>
@@ -143,7 +143,7 @@
 							</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/fashion-weather.jpg" alt="" /></div><div class="content">
-							<h2><a href="#">Fashion Weather App</a></h2>
+							<h2><b class="case-study-title">Fashion Weather App</b></h2>
 							<h4>Men's custom outfit builder.</h4>
 							<p>My Role: Researcher, client manager, usability tester</p>
 							<p>CASE STUDY COMING SOON</p>
@@ -151,7 +151,7 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/columbia.png" alt="" /></div><div class="content">
-							<h2><a href="#">Columbia University</a></h2>
+							<h2><b class="case-study-title">Columbia University</b></h2>
 							<h4>A new way to plan your trips.</h4>
 							<p>My Role: Lead researcher, strategist, usability tester</p>
 							<p>CASE STUDY COMING SOON</p>
@@ -198,15 +198,17 @@
 							<!-- </section> -->
 
 							<!-- CTA -->
+
 							<section id="cta" class="wrapper style4">
-								<div class="inner">
-									<header>
-										<h2>Let's work together!</h2>
-									</header>
-									<ul class="actions">
-										<li><a href="#" class="button fit">Say Hello</a></li>
-									</ul>
-								</div>
+									<div class="inner">
+										<header>
+											<h2>Let's work together!</h2>
+										</header>
+										<ul class="actions">
+											<li><a href="#" class="button fit">Say Hello</a></li>
+										</ul>
+									</div>
+								
 							</section>
 
 							<!-- Footer -->
