--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<li><a href="generic.html">About</a></li>
 								<li><a href="elements.html">Process</a></li>
 								<li><a href="#two">Work</a></li>
-								<li><a href="#cta">Contact</a></li>
+								<li><a href="#stephsketch">Contact</a></li>
 							</ul>
 						</div>
 					</li>
@@ -54,6 +54,7 @@
 					#banner p {
 						letter-spacing: 0; 
 						text-transform: none;
+						color: white;
 					}
 
 				</style>
@@ -71,15 +72,15 @@
 					<section id="one" class="wrapper style1 special">
 						<!-- <div class="inner"> -->
 						<header class="major">
-							<h2>I'm a UX Designer, striving to<br />
+							<h2 style="font-size:2.5em">I'm a UX Designer, striving to<br />
 								change the world one iteration at a time.</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								<p style="font-size:16px">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 									fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 								</header>
 								<!-- 	</div> -->
-								<ul class="actions">
+<!-- 								<ul class="actions">
 									<li><a href="generic.html" class="button fit special">About me</a></li>
-								</ul>
+								</ul> -->
 							</section>
 
 							<!-- Banner Image Hands UXing-->
@@ -198,8 +199,17 @@
 							<!-- </section> -->
 
 							<!-- CTA -->
-
-							<section id="cta" class="wrapper style4">
+							<section id="stephsketch">
+								<div class="inner">
+									<header>
+										<h2 style="color:white; font-size:2em;">Let's work together!</h2>
+										<ul class="actions">
+											<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button fit special">Say Hello</a></li>
+										</ul>
+									</header>
+								</div>
+							</section>
+							<!-- <section id="cta" class="wrapper style4">
 									<div class="inner">
 										<header>
 											<h2>Let's work together!</h2>
@@ -209,20 +219,20 @@
 										</ul>
 									</div>
 								
-							</section>
+							</section> -->
 
 							<!-- Footer -->
 							<footer id="footer">
 								<ul class="icons">
-									<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hello!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+									<li><a href="https://www.linkedin.com/in/stephanie-del-rio-ab850245" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://twitter.com/Stephdelrio" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.instagram.com/stephdelrio/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<!-- 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 								-->					
 								</ul>
 								<ul class="copyright">
-									<li>&copy; SDR</li><li><a href="http://iamwill.us">WPY</a></li>
+									<li>&copy; SDR</li><li><a href="http://iamwill.us" target="_blank">WPY</a></li>
 								</ul>
 							</footer>
 						</div>
