--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Spectral by HTML5 UP</title>
+		<title>My Process</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">SDR</a></h1>
+						<h1><a href="index.html">Steph Del Rio</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -29,10 +29,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">About me</a></li>
-											<li><a href="elements.html">Case Studies</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="generic.html">About</a></li>
+											<li><a href="elements.html">Process</a></li>
+											<li><a href="index.html#two">Work</a></li>
+											<li><a href="index.html#cta">Contact</a></li>
 										</ul>
 									</div>
 								</li>
