--- a/snapstyle.html
+++ b/snapstyle.html
@@ -24,10 +24,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">About me</a></li>
-											<!-- <li><a href="elements.html">Case Studies</a></li> -->
-	<!-- 										<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li> -->
+											<li><a href="generic.html">About</a></li>
+											<li><a href="elements.html">Process</a></li>
+											<li><a href="index.html#two">Work</a></li>
+											<li><a href="index.html#cta">Contact</a></li>
 										</ul>
 									</div>
 								</li>
