--- a/snapstyle.html
+++ b/snapstyle.html
@@ -27,7 +27,7 @@
 											<li><a href="generic.html">About</a></li>
 											<li><a href="elements.html">Process</a></li>
 											<li><a href="index.html#two">Work</a></li>
-											<li><a href="index.html#cta">Contact</a></li>
+											<li><a href="index.html#stephsketch">Contact</a></li>
 										</ul>
 									</div>
 								</li>
@@ -488,18 +488,18 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
+							<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hello!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/stephanie-del-rio-ab850245" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://twitter.com/Stephdelrio" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.instagram.com/stephdelrio/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<!-- 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+								-->					
+							</ul>
+							<ul class="copyright">
+								<li>&copy; SDR</li><li><a href="http://iamwill.us" target="_blank">WPY</a></li>
+							</ul>
 					</footer>
-
-			</div>
+				</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
