Snap style changes

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 									<header>
 										<h2 style="color:white; font-size:2em;">Let's work together!</h2>
 										<ul class="actions">
-											<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button fit special">Say Hello</a></li>
+											<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button big special">Say Hello</a></li>
 										</ul>
 									</header>
 								</div>
