--- a/snapstyle.html
+++ b/snapstyle.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+
 <html>
 	<head>
 		<title>Snapstyle case study</title>
@@ -27,7 +28,7 @@
 											<li><a href="generic.html">About</a></li>
 											<li><a href="elements.html">Process</a></li>
 											<li><a href="index.html#two">Work</a></li>
-											<li><a href="index.html#cta">Contact</a></li>
+											<li><a href="index.html#stephsketch">Contact</a></li>
 										</ul>
 									</div>
 								</li>
@@ -41,14 +42,14 @@
 						<div class="12u"><!-- <span class="image fit"> --><img src="images/snapstyle/SnapStyleLOGOLightFont.png" alt="" /><!-- </span> --></div>
 							<!-- Steph will give you image again 
 							font-family: "Avenir Next" !important; -->
-							<h2>A new way to search</h2>
+							<h2 style="color:white;">A new way to search</h2>
 						</header>
 
 						<section class="wrapper style5">
 							<div class="inner">
 							<h2 class="section-margin title-size"><center>Project Summary</center></h2>
 								<div class="row">
-									<div class="6u 6u$(medium)">
+									<div class="12u 12u$(medium)">
 										<header>
 											<h4>Problem</h4>
 											<p>Shoppers can't always find the right keywords to search for what they are looking for.</p>
@@ -66,14 +67,14 @@
 											<p>Lead Researcher, Strategist, Usability tester</p>
 										</header>
 									</div>
-									<div class="6u$ 6u$(medium)">
+									<div class="12u$ 12u$(medium)">
 									<!-- controls autoplay (plays upon opening) loop (plays infinitely) -->
 									<div class="myVideo">
 										<video width="266" height="461" controls autoplay loop>
 											<source src="images/snapstyle/Snapstyleprototype.mp4" type="video/mp4">
 												Your browser does not support the video tag.
-											</video>
-										</div>
+										</video>
+									</div>
 									</div> <!-- video end -->
 
 									<!-- Full case study start -->
@@ -486,19 +487,21 @@
 					</article> -->
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
 
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hello!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/stephanie-del-rio-ab850245" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://twitter.com/Stephdelrio" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/stephdelrio/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<!-- 
+						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						-->					
+					</ul>
+					<ul class="copyright">
+						<li>&copy; SDR</li><li><a href="http://iamwill.us" target="_blank">WPY</a></li>
+					</ul>
+				</footer>
 			</div>
 
 		<!-- Scripts -->
