fixes on footer

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<section id="one" class="wrapper style1 special">
 						<!-- <div class="inner"> -->
 						<header class="major">
-							<h2 style="font-size:2.5em">I'm a UX Designer, striving to<br />
+							<h2>I'm a UX Designer, striving to<br />
 								change the world one iteration at a time.</h2>
 								<p style="font-size:16px">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 									fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
