--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1 id="logo"><a href="index.html">Steph Del Rio</a></h1>
+			<h1 id="logo"><a href="index.html">STEPH DEL RIO</a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="special">
@@ -72,10 +72,9 @@
 					<section id="one" class="wrapper style1 special">
 						<!-- <div class="inner"> -->
 						<header class="major">
-							<h2>I'm a UX Designer, striving to<br />
-								change the world one iteration at a time.</h2>
-								<p style="font-size:16px">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-									fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							<h2>UX is where empathy for people meets tech.</h2>
+								<p style="font-size:18px">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+									If what I create can add a smile or make someone's life better, then I've done my job.</p>
 								</header>
 								<!-- 	</div> -->
 <!-- 								<ul class="actions">
@@ -118,7 +117,7 @@
 									<section id="two" class="wrapper alt style2">
 										<section class="spotlight">
 											<div class="image"><img src="images/snapstyle/shopstyle.jpg" alt="" /></div><div class="content">
-											<h2><b class="case-study-title">SHOPSTYLE</b></h2>
+											<h2><b class="case-study-title">SNAPSTYLE</b></h2>
 											<h4>Search, discover, and buy anything you can photograph.</h4>
 											<p>My Role: Lead researcher, strategist, designer, usability tester</p>
 											<ul class="actions">
@@ -130,31 +129,31 @@
 										<div class="image"><img src="images/snapstyle/curate.jpg" alt="" /></div><div class="content">
 										<h2><b class="case-study-title">CURATE</b></h2>
 										<h4>Men's custom outfit builder.</h4>
-										<p>My Role: Researcher, client manager, usability tester</p>
+										<p>My Role: Research, client relations, usability testing</p>
 										<p>CASE STUDY COMING SOON</p>
 									</div>
 								</section>
 								<section class="spotlight">
 									<div class="image"><img src="images/snapstyle/Airplane2.jpg" alt="" /></div><div class="content">
-									<h2><b class="case-study-title">Yelp Travel</b></h2>
+									<h2><b class="case-study-title">YELP TRAVEL</b></h2>
 									<h4>A new way to plan your trips.</h4>
-									<p>My Role: Lead researcher, strategist, usability tester</p>
+									<p>My Role: Lead researcher, strategist, designer, usability tester</p>
 									<p>CASE STUDY COMING SOON</p>
 								</div>
 							</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/fashion-weather.jpg" alt="" /></div><div class="content">
-							<h2><b class="case-study-title">Fashion Weather App</b></h2>
-							<h4>Men's custom outfit builder.</h4>
-							<p>My Role: Researcher, client manager, usability tester</p>
+							<h2><b class="case-study-title">RAINING STYLE</b></h2>
+							<h4>Personal Project.</h4>
+							<p>My Role: All of the above</p>
 							<p>CASE STUDY COMING SOON</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/columbia.png" alt="" /></div><div class="content">
-							<h2><b class="case-study-title">Columbia University</b></h2>
-							<h4>A new way to plan your trips.</h4>
-							<p>My Role: Lead researcher, strategist, usability tester</p>
+							<h2><b class="case-study-title">COLUMBIA UNIVERSITY</b></h2>
+							<h4>A information architecture analysis.</h4>
+							<p>My Role: Research, analysis, strategy</p>
 							<p>CASE STUDY COMING SOON</p>
 						</div>
 					</section>
@@ -204,7 +203,7 @@
 									<header>
 										<h2 style="color:white; font-size:2em;">Let's work together!</h2>
 										<ul class="actions">
-											<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button big special">Say Hello</a></li>
+											<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button small fit special">Say Hello</a></li>
 										</ul>
 									</header>
 								</div>
