--- a/snapstyle.html
+++ b/snapstyle.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Steph Del Rio</a></h1>
+						<h1 id="logo"><a href="index.html">STEPH DEL RIO</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
