--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Keep It Real by Steph Del Rio</title>
+	<title>Steph Del Rio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -58,7 +58,11 @@
 					}
 
 				</style>
-				
+
+							<!-- <ul class="actions horizontal small">
+								<li><a href="#" class="button small fit">Say Hello</a></li>
+								<li><a href="#" class="button small fit">View Work</a></li>
+							</ul> -->
 						</div>
 						<a href="#one" class="more scrolly"></a>
 					</section>
@@ -122,7 +126,7 @@
 										</div>
 									</section>
 									<section class="spotlight">
-										<div class="image"><img src="images/snapstyle/curate.jpg" alt="" /></div><div class="content">
+										<div class="image"><img src="images/snapstyle/curate.jpg" alt="" /></div><div class="content2">
 										<h2><b class="case-study-title">CURATE</b></h2>
 										<h4>Men's custom outfit builder.</h4>
 										<p>My Role: Research, client relations, usability testing</p>
@@ -138,7 +142,7 @@
 								</div>
 							</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/fashion-weather.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/fashion-weather.jpg" alt="" /></div><div class="content2">
 							<h2><b class="case-study-title">RAINING STYLE</b></h2>
 							<h4>Personal Project.</h4>
 							<p>My Role: All of the above</p>
@@ -148,8 +152,8 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/columbia.png" alt="" /></div><div class="content">
 							<h2><b class="case-study-title">COLUMBIA UNIVERSITY</b></h2>
-							<h4>A information architecture analysis.</h4>
-							<p>My Role: Research, analysis, strategy</p>
+							<h4>An information architecture analysis.</h4>
+							<p>My Role: Research, analysis, strategy, information architecture</p>
 							<p>CASE STUDY COMING SOON</p>
 						</div>
 					</section>
@@ -197,7 +201,7 @@
 							<section id="stephsketch">
 								<div class="inner">
 									<header>
-										<h2 style="color:white; font-size:2em;">Let's work together!</h2>
+										<h2 style="color:white; font-size:2.25em;">Let's work together!</h2>
 										<ul class="actions">
 											<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button small fit special">Say Hello</a></li>
 										</ul>
