--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div id="menu">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">About</a></li>
-								<li><a href="elements.html">Process</a></li>
+								<li><a href="about.html">About</a></li>
+								<!-- <li><a href="elements.html">Process</a></li> -->
 								<li><a href="#two">Work</a></li>
 								<li><a href="#stephsketch">Contact</a></li>
 							</ul>
@@ -56,31 +56,23 @@
 						text-transform: none;
 						color: white;
 					}
-
 				</style>
-
-							<!-- <ul class="actions horizontal small">
-								<li><a href="#" class="button small fit">Say Hello</a></li>
-								<li><a href="#" class="button small fit">View Work</a></li>
-							</ul> -->
-						</div>
-						<a href="#one" class="more scrolly"></a>
-					</section>
-
-					<!-- About me quick -->
-					
-					<section id="one" class="wrapper style1 special">
-						<!-- <div class="inner"> -->
-						<header class="major">
-							<h2>UX is where empathy for people meets tech.</h2>
-								<p style="font-size:18px">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-									If what I create can add a smile or make someone's life better, then I've done my job.</p>
-								</header>
-								<!-- 	</div> -->
-<!-- 								<ul class="actions">
-									<li><a href="generic.html" class="button fit special">About me</a></li>
-								</ul> -->
-							</section>
+			</div>
+			<a href="#one" class="more scrolly"></a>
+		</section>
+		<!-- About me quick -->
+		<section class="wrapper style1 special" id="one">
+			<!-- <div class="inner"> -->
+			<header class="major">
+				<h2>UX is where empathy for people meets tech.<br>That's why I love what I do.</h2>
+				<p style="font-size:18px">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+				If what I create can add a smile or make someone's life better, then I've done my job. <a href="about.html">Read More</a></p>
+				</header>
+				<!-- 	</div> -->
+<!-- 				<ul class="actions">
+					<li><a href="about.html" class="button fit special">About me</a></li>
+				</ul> -->
+		</section>
 
 							<!-- Banner Image Hands UXing-->
 							<!-- data-stellar-background-ratio="0.5" -->
