--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 						<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hello!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						<li><a href="https://www.linkedin.com/in/stephanie-del-rio-ab850245" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://twitter.com/Stephdelrio" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/stephdelrio/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<!-- <li><a href="https://www.instagram.com/stephdelrio/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 						<!-- 
 						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						-->					
