--- a/snapstyle.html
+++ b/snapstyle.html
@@ -39,10 +39,9 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-						<div class="12u"><!-- <span class="image fit"> --><img id="snapstyle-logo" src="images/snapstyle/SnapStyleLOGOLightFont.png" alt="" /><!-- </span> --></div>
-							<!-- Steph will give you image again 
-							font-family: "Avenir Next" !important; -->
-							<h2 style="color:white;">A New Way To Search</h2>
+						<h2 style="color:#EC2A70;">Snap</h2>
+						<h2>Style</h2>
+							<p style="color:white;">A New Way To Search</p>
 
 							<a href="#one" class="more scrolly"></a>
 						</header>
@@ -609,7 +608,7 @@
 						<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hello!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						<li><a href="https://www.linkedin.com/in/stephanie-del-rio-ab850245" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://twitter.com/Stephdelrio" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/stephdelrio/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<!-- <li><a href="https://www.instagram.com/stephdelrio/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 						<!-- 
 						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						-->					
