--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 				<!-- Main -->
 					<article id="main2">
 						<header>
-							<h2>UX Strategist &amp; Designer</h2>
+							<h2>UX STRATEGIST &amp; DESIGNER</h2>
 							<div id="main2-typetext-2">I'm a <p id="element2"></p>
 							<div class="typed-cursor"></div>
 							</div>
@@ -46,11 +46,12 @@
 									border-bottom: 1px solid white;
 									padding-bottom: 3px;
 									display: initial;
+									font-family: "Avenir Next" !important;
 								}
 								#main2 header p {
 									letter-spacing: 0; 
-									text-transform: none;
 									color: white;
+									font-family: "Avenir Next" !important;
 								}
 							</style>
 							<a href="#one" class="more scrolly"></a>
