--- a/snapstyle.html
+++ b/snapstyle.html
@@ -133,7 +133,7 @@
 
 										<br><br>
 										<div class="center-images">
-											<img src="images/snapstyle/AffinityMapDuo.JPG" alt="affinity">
+											<img src="images/snapstyle/AffinityMapDuo.jpg" alt="affinity">
 											<div class="imgCaption">Synthesizing our interview data</div>
 										</div>
 										<br>
