--- a/snapstyle.html
+++ b/snapstyle.html
@@ -201,11 +201,19 @@
 										<div class="12u$ 12u$(medium)">
 											<header>
 												<div class="center-images">
-													<img src="images/snapstyle/ShopstyleFeatureAnalysis.png" alt="affinity">
-													<div class="imgCaption">Feature Analysis</div>
+													<img src="images/snapstyle/FeatureAnalysisRedone.png" alt="affinity">
+												<br><br>
+												<div class="center-images">
+													<img src="images/snapstyle/VisualSearchAnalysis.png" alt="affinity">
+												<br>
+												<div class="center-images">
+													<img src="images/snapstyle/VisualSearchAn2.png" alt="affinity">
+													
 												</div>
 											</header>
-										</div><br>
+										</div>
+										
+										<br>
 										<p>We were surprised to see a few retailers already tapping into image recognition.</p>
 										<p>Neiman Marcus, Macy's, and Urban outfitters had all signed contracts with the lead providers of image recognition technology. It seemed we were on to something...</p>
 										<p>We downloaded and analyzed each of these apps, analyzing the usability, testing the accuracy and breadth of the technology.</p>
