howitworks image redone

--- a/snapstyle.html
+++ b/snapstyle.html
@@ -170,7 +170,9 @@
 										</blockquote>
 										</p>
 											<div class="center-images">
+												<a href="images/snapstyle/ConceptValidation.png" data-lightbox="image-1">
 												<img src="images/snapstyle/ConceptValidation.png" alt="affinity">
+												</a>
 											</div>
 										<h2>User Personas &amp; Scenarios:</h2>
 										<p>Personas are fictitious characters created to represent the users goals and behaviors based on synthesized data from user interviews. Personas are helpful in putting a name and face to our users. It helps us remember and empathize for them. </p>
@@ -265,7 +267,7 @@
 										<div class="12u$ 12u$(medium)">
 											<header>
 												<div class="center-images">
-													<img src="images/snapstyle/howitworks.png" alt="affinity">
+													<img src="images/snapstyle/howitworksfinal.png" alt="affinity">
 												</div>
 											</header>
 										</div>
