--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<!-- <div class="inner"> -->
 			<header class="major">
 				<h2>UX is where empathy for people meets tech.<br>That's why I love what I do.</h2>
-				<p style="font-size:18px">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+				<p style="font-size:18px">As a UX Designer, I get to call creating experiences a "job," but it's so much more than that.<br />
 					If what I create can add a smile or make someone's life better, then I've done my job. <a href="about.html">Read More</a></p>
 				</header>
 			</section>
@@ -119,18 +119,16 @@
 	<div class="inner">
 		<header>
 			<h2 style="color:white; font-size:2.25em;">Let's work together!</h2>
-			<!-- <ul class="actions">
+			<ul class="actions">
 				<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button small fit special">Say Hello</a></li>
-			</ul> -->
+			</ul>
 		</header>
 	</div>
 </section>
 
 <!-- Footer -->
 <footer id="footer">
-	<ul class="actions">
-				<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button small fit special">Say Hello</a></li>
-	</ul>
+	<p>stephdelrio.design@gmail.com</p>
 	<ul class="icons">
 		<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hello!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 		<li><a href="https://www.linkedin.com/in/stephanie-del-rio-ab850245" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
