--- a/about.html
+++ b/about.html
@@ -69,28 +69,31 @@
 								<p>I also thrive at applying my research skills gained from my Political Science degree to my current user research process in investigating and discovering user needs, analyzing competitors and uncovering market opportunities.</p>
 
 								<p>I believe in creative collaboration, and strive under pressure. I love challenges, and I appreciate feedback. I consider myself an “entrepreneur in training” and strive to meet business goals as I design user experiences.</p>
-
+								<div class="inner">
+									<header>
+										<ul class="actions">
+											<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hi there!" class="button small fit special">Say Hello</a></li>
+										</ul>
+									</header>
+								</div>	
 							</div>
 						</section>
 					</article>
 
 				<!-- Footer -->
-					<footer id="footer">
+				<footer id="footer">
+					<p>stephdelrio.design@gmail.com</p>
 					<ul class="icons">
 						<li><a href="mailto:stephdelrio.design@gmail.com?subject=Hello!" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						<li><a href="https://www.linkedin.com/in/stephanie-del-rio-ab850245" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://twitter.com/Stephdelrio" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<!-- <li><a href="https://www.instagram.com/stephdelrio/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
-						<!-- 
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						-->					
+
 					</ul>
 					<ul class="copyright">
 						<li>&copy; SDR</li><li><a href="http://iamwill.us" target="_blank">WPY</a></li>
 					</ul>
 				</footer>
-
-			</div>
+				</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
