landing page update

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 		<section class="wrapper style1 special" id="one">
 			<!-- <div class="inner"> -->
 			<header class="major">
-				<h2>UX is where empathy for people meets tech.<br>That's why I love what I do.</h2>
-				<p style="font-size:18px">As a UX Designer, I get to call creating experiences a "job," but it's so much more than that.<br />
+				<h2>UX is where empathy for people meets tech.<br>That's what I love about it.</h2>
+				<p style="font-size:18px">As a UX Designer, my focus is on the user and how they interact with products they love.<br />
 					If what I create can add a smile or make someone's life better, then I've done my job. <a href="about.html">Read More</a></p>
 				</header>
 			</section>
