--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	</div>
 </section>
 <section class="spotlight">
-	<div class="image"><img src="images/columbia.png" alt="" /></div><div class="content">
+	<div class="image"><img src="images/columbia.jpg" alt="" /></div><div class="content">
 	<h2><b class="case-study-title">COLUMBIA UNIVERSITY</b></h2>
 	<h4>An information architecture analysis.</h4>
 	<p>My Role: Research, analysis, strategy, information architecture</p>
