--- a/snapstyle.html
+++ b/snapstyle.html
@@ -73,7 +73,7 @@
 									<div class="12u$ 12u$(medium)">
 									<!-- controls autoplay (plays upon opening) loop (plays infinitely) -->
 									<div class="myVideo">
-										<video width="266" height="461" controls autoplay loop>
+										<video width="266" height="461" controls autoplay>
 											<source src="images/snapstyle/Snapstyleprototype.mp4" type="video/mp4">
 												Your browser does not support the video tag.
 										</video>
@@ -91,7 +91,7 @@
 											Tatum had a graphic design background so she owned the high fidelity wireframes and prototyping. Amelia had a fashion background and was great at covering all the bases; and I had extensive research experience from my political science degree and fashion background, so I took the lead on research and strategy. I had a blast contributing to the other areas of the process as well (design studio sketching, usability testing and reiterating). Our team's emphasis on communication and cross-functional collaboration is what made this project not only successful, but fun. But I’m not going to jump ahead! Keep reading for the rest of the story. </p>
 											<div class="6u$ 6u$(medium)">
 												<div class="center-images-2">
-														<a href="images/snapstyle/team.png" data-lightbox="image-1"><img src="images/snapstyle/team.png" alt="angels"></a>
+														<a href="images/snapstyle/team.jpg" data-lightbox="image-1"><img src="images/snapstyle/team.jpg" alt="angels"></a>
 													<div class="imgCaption">Amelia, Tatum and Steph <br>(aka Charlie's Angels)</div>
 												</div>				
 											</div>
@@ -129,7 +129,7 @@
 											<p>Our survey data got us off to a great start. We had 98 total respondents with <b>59.2% stating "Finding what I'm looking for" as a central frustration in online shopping.</b> Another data point was how low ShopStyle ranked among its competitors which revealed a business opportunity.</p>
 											<br><br>
 											<div class="center-images">
-												<img src="images/snapstyle/SurveyData.png" alt="affinity">
+												<img src="images/snapstyle/SurveyData.jpg" alt="affinity">
 												<div class="imgCaption">Survey Data</div>
 											</div>
 											<br><br>
@@ -236,7 +236,7 @@
 												<p>From our feature analysis, we took a deeper look at Craves, Amazon Flow, and Neiman Marcus. We downloaded and analyzed each of these apps, analyzing the usability, the user flow, the UI, testing the accuracy and breadth of the technology. We took note of what we liked and didn't like and factored that into our design strategy. </p>
 												<div class="center-images">
 											
-													<img src="images/snapstyle/VisualSearchAnalysis.png" alt="affinity">		
+													<img src="images/snapstyle/VisualSearchAnalysis.jpg" alt="affinity">		
 												<br>
 												<div class="center-images">
 													<img src="images/snapstyle/ProsConsNew.png" alt="affinity">
@@ -319,8 +319,8 @@
 											
 												<p><b>Search Results Iterations:</b></p>
 												<div class="center-images">
-													<a href="images/snapstyle/SearchResultsIterations.png" data-lightbox="image-1">
-													<img src="images/snapstyle/SearchResultsIterations.png" alt="affinity">
+													<a href="images/snapstyle/SearchResultsIterations.jpg" data-lightbox="image-1">
+													<img src="images/snapstyle/SearchResultsIterations.jpg" alt="affinity">
 													</a>
 												</div>
 											</header>
@@ -330,7 +330,7 @@
 										<div class="12u$ 12u$(medium)">
 									<!-- controls autoplay (plays upon opening) loop (plays infinitely) -->
 										<div class="myVideo2">
-											<video width="266" height="461" controls autoplay loop>
+											<video width="266" height="461" controls autoplay>
 												<source src="images/snapstyle/Snapstyleprototype.mp4" type="video/mp4">
 													Your browser does not support the video tag.
 											</video>
