--- a/snapstyle.html
+++ b/snapstyle.html
@@ -47,6 +47,8 @@
 
 							<a href="#one" class="more scrolly"></a>
 						</header>
+						
+						<a href="#" class="scrollToTop"></a>
 
 						<section class="wrapper style5 case-study" id="one">
 							<div class="inner">
