--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 	<title>Steph Del Rio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="User Experience Portfolio">
+	<meta name="keywords" content="ux, user experience, user research, UI, designer, coach, fashion, tech, women in tech, programming, user interface, general assembly, New York, NYC">
+	<meta name="author" content="Stephanie Del Rio">
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/animate.css">
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	<link rel="icon" href="images/Favicon.png" type="image/png" sizes="16x16">
@@ -55,12 +59,13 @@
 			</div>
 			<a href="#one" class="more scrolly"></a>
 		</section>
+		<a href="#" class="scrollToTop"></a>
 		<!-- About me quick -->
 		<section class="wrapper style1 special" id="one">
 			<!-- <div class="inner"> -->
 			<header class="major">
-				<h2>UX is where empathy for people meets tech.<br>That's what I love about it.</h2>
-				<p style="font-size:18px">As a UX Designer, my focus is on the user and how they interact with products they love.<br />
+				<h2 class="wow fadeInUp" data-wow-delay="0.2s">UX is where empathy for people meets tech.<br>That's what I love about it.</h2>
+				<p class="wow fadeInUp" data-wow-delay="0.4s"style="font-size:18px">As a UX Designer, my focus is on the user and how they interact with products they love.<br />
 					If what I create can add a smile or make someone's life better, then I've done my job. <a href="about.html">Read More</a></p>
 				</header>
 			</section>
@@ -70,17 +75,18 @@
 
 			<section id="two" class="wrapper alt style2">
 				<section class="spotlight">
-					<div class="image"><img src="images/snapstyle/shopstyle.jpg" alt="" /></div><div class="content">
-					<h2><b class="case-study-title">SNAPSTYLE</b></h2>
-					<h4>Search, discover, and buy anything you can photograph.</h4>
-					<p>My Role: Lead researcher, strategist, designer, usability tester</p>
-					<ul class="actions">
-						<li><a href="snapstyle.html" class="button small fit">Full Case Study</a></li>
-					</ul>
-				</div>
-			</section>
+					<div class="image wow fadeInLeft" data-wow-delay="0.4s"><img src="images/snapstyle/shopstyle.jpg" alt="" /></div>
+					<div class="content wow fadeInRight" data-wow-delay="0.4s">
+						<h2><b class="case-study-title">SNAPSTYLE</b></h2>
+						<h4>Search, discover, and buy anything you can photograph.</h4>
+						<p>My Role: Lead researcher, strategist, designer, usability tester</p>
+						<ul class="actions wow fadeInUp" data-wow-delay="0.2s">
+							<li><a href="snapstyle.html" class="button small fit">Full Case Study</a></li>
+						</ul>
+					</div>
+				</section>
 			<section class="spotlight">
-				<div class="image"><img src="images/snapstyle/curate.jpg" alt="" /></div><div class="content2">
+				<div class="image wow fadeInRight" data-wow-delay="0.4s"><img src="images/snapstyle/curate.jpg" alt="" /></div><div class="content2 wow fadeInLeft" data-wow-delay="0.4s">
 				<h2><b class="case-study-title">CURATE</b></h2>
 				<h4>Men's custom outfit builder.</h4>
 				<p>My Role: Research, client relations, usability testing</p>
@@ -88,7 +94,7 @@
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="images/snapstyle/Airplane2.jpg" alt="" /></div><div class="content">
+			<div class="image wow fadeInLeft" data-wow-delay="0.4s"><img src="images/snapstyle/Airplane2.jpg" alt="" /></div><div class="content wow fadeInRight" data-wow-delay="0.4s">
 			<h2><b class="case-study-title">YELP TRAVEL</b></h2>
 			<h4>A new way to plan your trips.</h4>
 			<p>My Role: Lead researcher, strategist, designer, usability tester</p>
@@ -96,7 +102,7 @@
 		</div>
 	</section>
 	<section class="spotlight">
-		<div class="image"><img src="images/fashion-weather.jpg" alt="" /></div><div class="content2">
+		<div class="image wow fadeInRight" data-wow-delay="0.4s"><img src="images/fashion-weather.jpg" alt="" /></div><div class="content2 wow fadeInLeft" data-wow-delay="0.4s">
 		<h2><b class="case-study-title">RAINING STYLE</b></h2>
 		<h4>Personal Project.</h4>
 		<p>My Role: All of the above</p>
@@ -104,7 +110,7 @@
 	</div>
 </section>
 <section class="spotlight">
-	<div class="image"><img src="images/columbia.jpg" alt="" /></div><div class="content">
+	<div class="image wow fadeInLeft" data-wow-delay="0.4s"><img src="images/columbia.jpg" alt="" /></div><div class="content wow fadeInRight" data-wow-delay="0.4s">
 	<h2><b class="case-study-title">COLUMBIA UNIVERSITY</b></h2>
 	<h4>An information architecture analysis.</h4>
 	<p>My Role: Research, analysis, strategy, information architecture</p>
@@ -116,7 +122,7 @@
 
 <!-- CTA -->
 <section id="stephsketch">
-	<div class="inner">
+	<div class="inner wow fadeInUp" data-wow-delay="0.2s">
 		<header>
 			<h2 style="color:white; font-size:2.25em;">Let's work together!</h2>
 			<ul class="actions">
@@ -141,16 +147,20 @@
 </footer>
 </div>
 
-					<!-- Scripts -->
-					<script src="assets/js/jquery.min.js"></script>
-					<script src="assets/js/jquery.scrollex.min.js"></script>
-					<script src="assets/js/jquery.scrolly.min.js"></script>
-					<script src="assets/js/skel.min.js"></script>
-					<script src="assets/js/util.js"></script>
-					<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-					<script src="assets/js/main.js"></script>
-					<script src="assets/js/typed.js"></script>
-					<script src="assets/js/jquery.stellar.min.js"></script>  
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="assets/js/main.js"></script>
+<script src="assets/js/typed.js"></script>
+<script src="assets/js/jquery.stellar.min.js"></script> 
+<script src="assets/js/wow.min.js"></script>
+<script>
+	new WOW().init();
+</script> 
 					
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
