--- a/snapstyle.html
+++ b/snapstyle.html
@@ -57,7 +57,7 @@
 									<div class="12u 12u$(medium)">
 										<header>
 											<!-- <h2>The Brief:</h2> -->
-											<p><b>The Brief:</b> This was a student project at General Assembly in which we were given two weeks to solve a user pain point for an existing brand.</p>
+											<p><b>The Brief:</b> Our team was given two weeks to solve a user pain point for an existing brand.</p>
 
 											<!-- <h2>Problem:</h2> -->
 											<p><b>Problem:</b> Shoppers can't always identify the right keywords to search for what they are looking for.</p>
